# signals-client-python

./: LICENSE  README.md  pyproject.toml
examples/signalsbot/: .env.example  Dockerfile  README.md  docker-compose.yml
examples/signalsbot/signalsbot/: __main__.py
src/grexie_signals_client/: __init__.py
tests/: test_client.py
