[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "grexie-signals-client"
version = "0.1.9"
description = "Typed Python client for Grexie Signals websocket subscriptions and position management."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Grexie" }]
keywords = ["grexie", "signals", "websocket", "trading", "position-management"]
dependencies = ["websockets>=12"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://github.com/grexie/signals-client-python"
Repository = "https://github.com/grexie/signals-client-python"
Issues = "https://github.com/grexie/signals-client-python/issues"
